FEAT: Implemented PaymentMethodScreen.kt and added it to our navigation graph. Added some style parameters to the manifest. Added necessary resources.
NOTE: Currently unable to make a vector asset from the ips.svg file, so ips.png acts as a placeholder.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -420,4 +420,12 @@
     <string name="amount_entry_title">ENTER AMOUNT</string>
     <string name="amount_entry_continue">CONTINUE</string>
     <string name="currency_rsd">RSD</string>
+
+    <!-- Payment Method Screen -->
+    <string name="payment_method_title">PAYMENT METHOD</string>
+    <string name="payment_method_amount_label">Transaction amount</string>
+    <string name="payment_method_select_label">SELECT PAYMENT METHOD</string>
+    <string name="payment_method_card">Card payment</string>
+    <string name="payment_method_ips">IPS payment</string>
+    <string name="payment_method_continue">CONTINUE</string>
 </resources>
