FEAT: Implemented HeadlessPaymentActivity.kt as a substitute for the old PosActivity.kt without the UI elements, and the CardProcessingScreen.kt for card payment. Activity needs further work because NFC card reading doesn't work yet. Incorporated it into our navigation, our HeadlessPaymentActivity.kt is supposed to return the results to our MainActivity.kt and show the transaction result screen.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -456,4 +456,10 @@
     <string name="transaction_receipt_message">MESSAGE</string>
     <string name="transaction_receipt_aid">AID</string>
     <string name="transaction_receipt_e2e">E2E</string>
+
+    <!-- Card Processing Screen -->
+    <string name="card_processing_title">POS</string>
+    <string name="card_processing_amount_label">Transaction Amount</string>
+    <string name="card_processing_tap_card_label">TAP YOUR CARD</string>
+    <string name="card_processing_cancel">CANCEL TRANSACTION</string>
 </resources>
