--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -448,4 +448,10 @@
     <string name="transaction_receipt_message">SPOROČILO</string>
     <string name="transaction_receipt_aid">AID</string>
     <string name="transaction_receipt_e2e">E2E</string>
+
+    <!-- Card Processing Screen -->
+    <string name="card_processing_title">POS</string>
+    <string name="card_processing_amount_label">Znesek transakcije</string>
+    <string name="card_processing_tap_card_label">PRIBLIŽAJTE KARTICO</string>
+    <string name="card_processing_cancel">PREKLIČI TRANSAKCIJO</string>
 </resources>
